--- a/grid/07-aula-12-areas-de-grid/style_grid.css
+++ b/grid/07-aula-12-areas-de-grid/style_grid.css
@@ -1,41 +1,48 @@
-.wrapper {
-  background-color: aquamarine;
-  display: grid;
-  grid-template-columns: repeat(5, 1fr);  /* 5 colunas de 1fr */
-  grid-auto-rows: 200px;
-  grid-gap: 0.5rem;
-  height: 100vh;
+/* @media (min-width: 48em) { SE QUISER USAR RESPONSIVIDADE */  
+  .wrapper {
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    /* 4 colunas de 1fr */
+    grid-auto-rows: 200px;
+    grid-gap: 0.5rem;
+    height: 100vh;
+    grid-template-areas: 
+      "header header header header"
+      "main   main   main   aside"
+      "footer footer footer footer"
+    ;
+  }
+/* } */
 
+.wrapper>* {
+  background-color: royalblue;
+  font-size: 3rem;
+  padding: 1rem;
 }
 
-.wrapper>div {
-    background-color: royalblue;
-    font-size: 3rem;
-    padding: 1rem;
-  }
-
-.wrapper>div:nth-child(even) {
+.wrapper>*:nth-child(even) {
   background-color: yellow;
 }
 
-.wrapper>div:nth-child(1) {
-  /* grid-row-start: 1;
-  grid-row-end: 3; */
-  grid-column: 1 / 3;
-  grid-row: 1 / 3;
+/* ABAIXO USAREMOS OS ELEMENTOS, MAS PODERIA SER EM CLASSES
+
+.l-header {
+  grid-area: header 
+}
+*/
+
+header {
+  grid-area: header;
 }
 
-.wrapper>div:nth-child(2) {
-  grid-column: 2 / 4;
-  grid-row: 2 / 4;
+main {
+  grid-area: main;
 }
 
-.wrapper>div:nth-child(3) {
-  grid-column: 3 / 5;
-  grid-row: 3 / 5;
+aside {
+  grid-area: aside;
 }
 
-.wrapper>div:nth-child(4) {
-  grid-column: 4 / 6;
-  grid-row: 4 / 6;
+footer {
+  grid-area: footer;
 }
