add a possibilidade usar o .

--- a/grid/07-aula-12-areas-de-grid/style_grid.css
+++ b/grid/07-aula-12-areas-de-grid/style_grid.css
@@ -11,6 +11,7 @@
       "main   main   main   aside"
       "footer footer footer footer"
     ;
+    /* Se quiser deixar algum espaço em branco use  . ,  só nas extremidades */
   }
 /* } */
 
